<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg" >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_bar_normal_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/btn_container_conversation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/em_main_bottom_item_bg"
                android:drawableTop="@drawable/em_tab_chat_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/session"
                android:textColor="@color/em_main_botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_address_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_mine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/em_main_bottom_item_bg"
                android:drawableTop="@drawable/em_tab_contact_list_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/address_book"
                android:textColor="@color/em_main_botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/em_main_bottom_item_bg"
                android:drawableTop="@drawable/em_tab_setting_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="centerCrop"
                android:text="@string/setting"
                android:textColor="@color/em_main_botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

</RelativeLayout>